@startuml

' Zero or One 	|o--
' Exactly One 	||--
' Zero or Many 	}o--
' One or Many 	}|--

' dot = mandatory field

' avoid problems with angled crows feet
skinparam linetype ortho

class "Users" {
    *id : Long <<generated>>
    --
    *username : String
    *password : String
    *email : String
    first_name : String
    last_name : String
    *address : String
    *phone : String
    birth_date : Date
    --
    *is_user_seller : Boolean
    --
    *is_user_admin : Boolean
}

class "Sellers" {
    *id : Long <<generated>>
    --
    *name : String
    *address : String
    phone : String
}

class "Employees" {
    *id : Long <<generated>>
    --
    *user_id : Long <<FK>>
    *seller_id : Long <<FK>>
}

class "Product_Categorys" {
    *id : Long <<generated>>
    --
    *name : String
}

class "Ingredients" {
    *id : Long <<generated>>
    --
    *name : String
}

class "Products" {
    *id : Long <<generated>>
    --
    *name : String
    *product_category_id : Long <<FK>>
}

class "Product_Ingredients" {
    *id : Long <<generated>>
    --
    *product_id : Long <<FK>>
    *ingredient_id : Long <<FK>>
}

class "Seller_Products" {
    *id : Long <<generated>>
    --
    *seller_id : Long <<FK>>
    *product_id : Long <<FK>>
}

class "Order_Statuses" {
    *id : Long <<generated>>
    --
    *name : Long
}

class "Orders" {
    *id : Long <<generated>>
    --
    *seller_id : Long <<FK>>
    *user_id : Long <<FK>>
    *order_status_id : Long <<FK>>
}

class "Order_Products" {
    *id : Long <<generated>>
    --
    *order_id : Long <<FK>>
    *product_id : Long <<FK>>
}

Users  -- "1" Employees
Employees "many" -- "1" Sellers

Seller_Products "1" -- "1" Sellers
Seller_Products "1" -- "many" Products

Product_Ingredients "many" -- "many" Ingredients
Product_Ingredients "many" -- "many" Products

Product_Categorys "many" -- "many" Products

Order_Statuses "1" -- "1" Orders
Order_Products "many" -- "1" Orders
Orders "many" -- "1" Users
Orders "many" -- "1" Sellers

Order_Products "many" -- "1" Products

'e01 }|..|| e02
'e01 }|..|| e03

'e02 }|..|| e05

'e02 }|..|| e04
'e03 }|..|| e04

'e02 }|..|| e06
'e03 }|..|| e06


@enduml
